public abstract class NPC extends Character {

    public NPC() {

    }
}
